tests/snapshots/integration__integration_tests__list__json_tree_matches_main_after_merge.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--format=json"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "branch": "main",
    "path": "[REPO]",
    "kind": "worktree",
    "commit": {
      "sha": "133d1f05a73a1478707f3438625069c7ebd8eb27",
      "short_sha": "133d1f0",
      "message": "Same content on main",
      "timestamp": 0
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      },
      "diff_vs_main": {
        "added": 0,
        "deleted": 0
      }
    },
    "worktree": {
      "detached": false,
      "bare": false
    },
    "is_main": true,
    "is_current": true,
    "statusline": "main  /u001b[2m^/u001b[22m",
    "symbols": "^"
  },
  {
    "branch": "feature-merged",
    "path": "[REPO].feature-merged",
    "kind": "worktree",
    "commit": {
      "sha": "d78d130165cc11f6df39113ded5bbf1c16f8ebc3",
      "short_sha": "d78d130",
      "message": "Merge main into feature",
      "timestamp": 0
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      },
      "diff_vs_main": {
        "added": 0,
        "deleted": 0
      }
    },
    "branch_state": "integrated",
    "integration_reason": "no_added_changes",
    "main": {
      "ahead": 2,
      "behind": 0
    },
    "worktree": {
      "detached": false,
      "bare": false
    },
    "is_main": false,
    "statusline": "feature-merged  /u001b[2m⊂/u001b[22m/u001b[2m↑/u001b[22m  /u001b[32m↑2/u001b[0m",
    "symbols": "⊂↑"
  }
]

----- stderr -----
