tests/snapshots/integration__integration_tests__list__json_with_git_operation.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--format=json"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "branch": "main",
    "path": "[REPO]",
    "kind": "worktree",
    "commit": {
      "sha": "f4fa1ba1ca52a38a0036c3c9dd8b486a83ced1e5",
      "short_sha": "f4fa1ba",
      "message": "Main conflicting changes",
      "timestamp": 0
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      },
      "diff_vs_main": {
        "added": 0,
        "deleted": 0
      }
    },
    "worktree": {
      "detached": false,
      "bare": false
    },
    "is_main": true,
    "is_current": true,
    "statusline": "main  /u001b[2m^/u001b[22m",
    "symbols": "^"
  },
  {
    "branch": "feature",
    "path": "[REPO].feature",
    "kind": "worktree",
    "commit": {
      "sha": "f4fa1ba1ca52a38a0036c3c9dd8b486a83ced1e5",
      "short_sha": "f4fa1ba",
      "message": "Main conflicting changes",
      "timestamp": 0
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      },
      "diff_vs_main": {
        "added": 0,
        "deleted": 0
      }
    },
    "branch_state": "conflicts",
    "main": {
      "ahead": 0,
      "behind": 0
    },
    "worktree": {
      "detached": true,
      "bare": false
    },
    "is_main": false,
    "statusline": "feature  /u001b[31m✘/u001b[39m",
    "symbols": "✘"
  }
]

----- stderr -----
