tests/snapshots/integration__integration_tests__list__json_with_user_marker.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--format=json"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "branch": "main",
    "path": "[REPO]",
    "kind": "worktree",
    "commit": {
      "sha": "b834638e33dbc6b37002685ee0777f4b8f1af904",
      "short_sha": "b834638",
      "message": "Initial commit",
      "timestamp": 0
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      },
      "diff_vs_main": {
        "added": 0,
        "deleted": 0
      }
    },
    "worktree": {
      "detached": false,
      "bare": false
    },
    "is_main": true,
    "is_current": true,
    "statusline": "main  /u001b[2m^/u001b[22m",
    "symbols": "^"
  },
  {
    "branch": "with-status",
    "path": "[REPO].with-status",
    "kind": "worktree",
    "commit": {
      "sha": "b834638e33dbc6b37002685ee0777f4b8f1af904",
      "short_sha": "b834638",
      "message": "Initial commit",
      "timestamp": 0
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      },
      "diff_vs_main": {
        "added": 0,
        "deleted": 0
      }
    },
    "branch_state": "same_commit",
    "main": {
      "ahead": 0,
      "behind": 0
    },
    "worktree": {
      "detached": false,
      "bare": false
    },
    "is_main": false,
    "statusline": "with-status  /u001b[2m·/u001b[22m🔧",
    "symbols": "·🔧"
  },
  {
    "branch": "without-status",
    "path": "[REPO].without-status",
    "kind": "worktree",
    "commit": {
      "sha": "b834638e33dbc6b37002685ee0777f4b8f1af904",
      "short_sha": "b834638",
      "message": "Initial commit",
      "timestamp": 0
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      },
      "diff_vs_main": {
        "added": 0,
        "deleted": 0
      }
    },
    "branch_state": "same_commit",
    "main": {
      "ahead": 0,
      "behind": 0
    },
    "worktree": {
      "detached": false,
      "bare": false
    },
    "is_main": false,
    "statusline": "without-status  /u001b[2m·/u001b[22m",
    "symbols": "·"
  }
]

----- stderr -----
